Add Two Repel/Attract Controller
Adding Two Thing that can controlled while arrow, Convert Repel/Attract.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script src="emitter.js"></script>
     <script src="repeller.js"></script>
     <script src="sketch.js"></script>
+    <script src="attractor.js"></script>
   </body>
 </html>
