--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="repeller.js"></script>
     <script src="sketch.js"></script>
     <script src="attractor.js"></script>
+    <!-- 추가된 js 파일 추가, GUI 라이브러리 추가 -->
   </body>
 </html>
