Something Not good, Tries to apply matter to Each Particle
Whatever

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <script src="particle.js"></script>
-    <script src="emitter.js"></script>
-    <script src="repeller.js"></script>
+    <script src="starsystem.js"></script>
+    <script src="starphysic.js"></script>
+    <script src="matter.js"></script>
+    <script src="starparticle.js"></script>
     <script src="sketch.js"></script>
-    <script src="attractor.js"></script>
     <!-- 추가된 js 파일 추가, GUI 라이브러리 추가 -->
   </body>
 </html>
