--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <script src="matter.js"></script>
+    <script src="materialsystem.js"></script>
     <script src="starsystem.js"></script>
     <script src="starphysic.js"></script>
+    <script src="materialparticle.js"></script>
     <script src="starparticle.js"></script>
-    <script src="matter.js"></script>
     <script src="sketch.js"></script>
     <!-- 추가된 js 파일 추가, GUI 라이브러리 추가 -->
   </body>
