--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="starphysic.js"></script>
     <script src="materialparticle.js"></script>
     <script src="starparticle.js"></script>
+    <script src="cursor.js"></script>
     <script src="sketch.js"></script>
     <!-- 추가된 js 파일 추가, GUI 라이브러리 추가 -->
   </body>
