System Sort Change, Add Systemlife
- Sort class for each part
- CSS style Changed
- html body text added
- Add systemlife for materialsystem

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+    <script src="lib/p5.min.js"></script>
+    <script src="lib/p5.gui.js"></script>
+    <script src="lib/quicksettings.js"></script>
     <meta charset="utf-8" />
     <title>NOC_4_07_ParticleSystemForcesRepeller</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <h2>Flat Universe</h2>
     <script src="matter.js"></script>
     <script src="materialsystem.js"></script>
     <script src="starsystem.js"></script>
