--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>Make This Universe Alive!</h3>
     <div id="description">
       <h3>How to Play?</h3>
-      <p>LeftClick : Make a New Star from Cursor | Up/Down Arrow : Increase/Decrease Power of Star <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of MaterialSystem <br> *Warning*
+      <p>LeftClick : Make a New Star from Cursor | Shift/Ctrl : Increase/Decrease Power of Star <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of MaterialSystem <br> *Warning*
         Changes to the gui will not affect the current system.</p>
     </div>
   </body>
