--- a/index.html
+++ b/index.html
@@ -28,23 +28,22 @@
     </style>
   </head>
   <body>
-    <h2>Flat Universe</h2>
+    <h2>Flat Universe's Depth</h2>
+    <script src="starphysic.js"></script>
     <script src="matter.js"></script>
     <script src="materialsystem.js"></script>
     <script src="starexpparticle.js"></script>
     <script src="starexpsystem.js"></script>
-    <script src="starsystem.js"></script>
-    <script src="starphysic.js"></script>
     <script src="materialparticle.js"></script>
-    <script src="starparticle.js"></script>
     <script src="cursor.js"></script>
     <script src="sketch.js"></script>
-    <!-- 추가된 js 파일 추가, GUI 라이브러리 추가 -->
     <h3>Make This Universe Alive!</h3>
     <div id="description">
       <h3>How to Play?</h3>
-      <p>LeftClick : Make a New Star from Cursor | Shift/Ctrl : Increase/Decrease Power of Star <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of MaterialSystem <br> *Warning*
-        Changes to the gui will not affect the current system.</p>
+      <p>LeftClick : Make a New Star from Cursor | Shift/Ctrl : Increase/Decrease Power of Star 
+        <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System | 1,2,3,4 : Hot Key for Size
+        <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of Material, Increase Chance of Size. *random(1,MaterialMass) | 
+        <br> *Warning* Not every changes of gui affect the current System. | Each Material System Only affect own System least Now. | Starlife globally affect all Star in canvas.</p>
     </div>
   </body>
-</html>
+</html>123
