--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <h3>How to Play?</h3>
       <p>LeftClick : Make a New Star from Cursor | Shift/Ctrl : Increase/Decrease Power of Star 
         <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System | 1,2,3,4 : Hot Key for Size
-        <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of Material, Increase Chance of Size. *random(1,MaterialMass) | 
-        <br> *Warning* Not every changes of gui affect the current System. | Each Material System Only affect own System least Now. | Starlife globally affect all Star in canvas.</p>
+        <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of Material, Increase Chance of Size. *random(1,MaterialMass) 
+        <br> Starlife : Life of Each Star | Gravity : Global Gravity of this Universe, Affect Everything. | ParticleColor/CanvasColor : Excuse Me?
+        <br><br> *Warning* Not every changes of gui affect the current System. | Each Material System Only affect own System least Now. | Starlife globally affect all Star in canvas.</p>
     </div>
   </body>
-</html>123
+</html>
