Flat Universe's Depth, and You.
- Add Commentary.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h2>Flat Universe's Depth</h2>
+    <h2>Flat Universe's Depth, and You</h2>
     <script src="starphysic.js"></script>
     <script src="matter.js"></script>
     <script src="materialsystem.js"></script>
@@ -38,13 +38,14 @@
     <script src="cursor.js"></script>
     <script src="sketch.js"></script>
     <h3>Make This Universe Alive!</h3>
+    <h4>Observing our universe, it seems like a living being. <br>What does your universe look like? Imagine your own universe. <br> Draw it. This universe is meant just for you.</h4>
     <div id="description">
-      <h3>How to Play?</h3>
+      <h3>How to Draw?</h3>
       <p>LeftClick : Make a New Star from Cursor | Shift/Ctrl : Increase/Decrease Power of Star 
         <br> C : Set Power 0 of Cursor | B : Reverse Power of Cursor | Enter : Make a New Material System | 1,2,3,4 : Hot Key for Size
         <br><br> GUI Stands For | MaterialLife : Life of Each Material | Nparticle : Material Gen per System | Slife : Life of Each Material System | MaterialMass : Mass of Material of Material, Increase Chance of Size. *random(1,MaterialMass) 
         <br> Starlife : Life of Each Star | Gravity : Global Gravity of this Universe, Affect Everything. | ParticleColor/CanvasColor : Excuse Me?
-        <br><br> *Warning* Not every changes of gui affect the current System. | Each Material System Only affect own System least Now. | Starlife globally affect all Star in canvas.</p>
+        <br><br> *Warning* Not every changes of gui affect the current System. | Each Material System Only affect own System least Now. | Starlife globally affect all Star in canvas.<br><br> ~ Thank you For Drawing ~</p>
     </div>
   </body>
 </html>
